word-wrap applied to text links, overflow issue fixed

--- a/css/master.css
+++ b/css/master.css
@@ -372,6 +372,7 @@ pre {
 
 .inlinelink {
   color: #F56F54;
+  word-wrap: break-word;
 }
 
 .inlinelink:hover {
